--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,16 +4,18 @@
   <div class="aside_container pos-abs col-xl-12 px-0 text-center text-light  h-100 d-flex flex-column pt-5">
     <div class="mb-5">
       <h2 class="text-center">
-        Hi <%=@user.name%>!
+        Hi <%=@user.name unless @user.nil?%>!
       </h2>
     </div>
     <div class="border-bottom pb-3">
       <h1>Bloggy</h1> 
       <h3>Your Blog Matters</h3>
     </div>
-    <div>
-      <%= link_to "Create a Blog", new_blog_path, class: 'btn btn-block btn-info mt-2' %>
-    </div>
+    <% unless @user.nil?%>
+      <div>
+        <%= link_to "Create a Blog", new_blog_path, class: 'btn btn-block btn-info mt-2' %>
+      </div>
+    <%end%>
   </div>
 </aside>
 
